--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -10,9 +10,13 @@
     <link rel="stylesheet" href="css/mui.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
 </head>
 
 <body ms-controller="index">
+    <div id="container" style="z-index:999;" ms-visible="isShowMap">
+        <button type="button" style="z-index:9999;float: right;top: 20px;right: 20px;" ms-click="closeMap">关闭</button>
+    </div> 
     <!--顶部-->
     <header class="mui-bar mui-bar-nav mui-text-center">
         <!-- <a id="menu" href="" class="mui-icon mui-action-menu mui-icon-bars mui-pull-left mui-text-danger"></a> -->
@@ -40,9 +44,8 @@
             <br>
             <div class="mui-content">
                 <!--地址展示-->
-                <div style="width: 95%; margin: 0 auto;z-index: 999;    position: relative;top: 10px;background-color: #fff;padding: 5px;" ms-click="openLocationSearch">
-                    <span class="mui-icon mui-icon-search">
-                </span>
+                <div style="width: 95%; margin: 0 auto;z-index: 99;position: relative;top: 10px;background-color: #fff;padding: 5px;" ms-on-tap="openLocationSearch">
+                    <span class="mui-icon mui-icon-search"></span>
                     <span>{{position}}</span>
                 </div>
                 <div class="swiper-container swiper1" style="top: -32px;">
@@ -56,7 +59,7 @@
                 </div>
                 <div style="position: relative;top: -46px;z-index: 10;float: right;padding-right: 10px;">
                     <button type="button" style="border-radius: 50px;">日历</button>
-                    <button type="button" style="border-radius: 50px;">地图</button>
+                    <button type="button" style="border-radius: 50px;" ms-click="showMap">地图</button>
                 </div>
                 <section>
                     <div>
@@ -65,7 +68,7 @@
                         <button type="button" class="mui-btn" ms-click="sortBy(2)">价格<span class="mui-icon mui-icon-arrowthinup"></span></button>
                     </div>
                     <div>
-                        <div class="swiper-slide-item" ms-repeat="roomList">
+                        <div class="swiper-slide-item" ms-repeat="roomList" ms-on-tap="goRoom(el.id)">
                             <div class="distance">{{round(el.distance/1000,1)}}KM</div>
                             <a href="###">
                                 <div ms-css-background-image="url({{urlAPINet + el.coverUrl}})">
@@ -90,6 +93,7 @@
             </div>
         </div>
     </div>
+
     <!-- content -->
     <!-- pop -->
     <script src="js/lib/mui.min.js"></script>
