--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -106,6 +106,8 @@
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=0743dafb590f3622f52d0d4218a9f1f7"></script>
     <script src="js/pages/index/index.js"></script>
     <script src="js/pages/user/my.js"></script>
+    <script src="js/util/calendar.js"></script>
+    <script src="js/util/partTime.js"></script>
     <!--include "../pages/user/popover.html"-->
 </body>
 
