--- a/js/layout/shell.html
+++ b/js/layout/shell.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>本酒店</title>
+    <title>本宿</title>
     <link href="css/mui.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/common.css">
     <!-- css -->
@@ -14,17 +14,6 @@
 </head>
 
 <body class="mui-ios mui-ios-8 mui-ios-8-0">
-<!--
-    <header class="mui-bar mui-bar-nav" style="display: -webkit-box;justify-content: space-between;position: fixed;">
-        <a id="menu" href="#popModule" class="mui-icon mui-action-menu mui-icon-bars mui-pull-left mui-text-danger"></a>&nbsp;&nbsp;
-        <div class="mui-input-row mui-search" style="-webkit-box-flex: 1;padding-top:2px;visibility: hidden;">
-            <input type="search" class="mui-input-clear" placeholder="搜索">
-        </div>
-        <a class="mui-btn-link" href="index.html">
-            <img id="logo" src="img/logo_color_black.jpg" alt="" style="margin-right: 0;" onclick="window.location.href='index.html'">
-        </a>
-    </header>
--->
     <div class="mui-content">
         <!-- content -->
     </div>
