--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -99,6 +99,7 @@
     <script src="js/lib/os.js"></script>
     <script src="js/lib/swiper.min.js"></script>
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=0743dafb590f3622f52d0d4218a9f1f7"></script>
+    <script src="js/util/filter.js"></script>
     <script src="js/pages/index/index.js"></script>
     <script src="js/pages/user/my.js"></script>
     <script src="js/util/calendar.js"></script>
