hotel的样式修改

--- a/css/hotel.css
+++ b/css/hotel.css
@@ -1,12 +1,22 @@
-.pic-info{
-    overflow: hidden;
+.calender {
+    width: 50px;
     height: 50px;
+    border-radius: 50px;
+    opacity: 0.9;
+    background-size: 25px 25px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.pic-info {
+    overflow: hidden;
+    height: 75px;
     transition: all 300ms;
 }
 
 .expand {
     width: 100%;
-    height: 50px;
+    height: 75px;
     font-size: 14px;
     text-align: left;
     display: block;
@@ -28,11 +38,11 @@
     /*display: inline-block;*/
 }
 
-.expand i{
+.expand i {
     font-size: 1.25rem;
     /*font-weight: lighter;*/
     font-style: normal;
-    display:inline-block;
+    display: inline-block;
     color: black;
 }
 
@@ -62,14 +72,14 @@
 }
 
 .expanded {
-    overflow:visible;
+    overflow: visible;
 }
 
-.expanded .expand:after  {
+.expanded .expand:after {
     -webkit-transform: rotateZ(90deg);
 }
 
-.pic-info .pic{
+.pic-info .pic {
     position: relative;
     color: white;
     background-size: cover;
@@ -90,8 +100,9 @@
     /*border-radius: 24px;*/
     /*left: 20px;*/
 }
-.pic-info .pic button{
-    background:white;
+
+.pic-info .pic button {
+    background: white;
     border: none;
     position: absolute;
     bottom: 25px;
@@ -104,40 +115,46 @@
     line-height: 24px;
     color: black;
 }
+
 .pic-info .info {
     display: table;
     width: 100%;
     border-collapse: collapse;
 }
+
 .pic-info .info div {
     display: table-cell;
     text-align: center;
     /*padding: 5px;*/
-    border:1px solid #c8c7cc;
+    border: 1px solid #c8c7cc;
     font-size: 12px;
     border-top: none;
     border-right: none;
 }
-.pic-info .info div a{
+
+.pic-info .info div a {
     width: 100%;
     padding: 5px;
     display: block;
     color: black;
 }
-.pic-info .info div a:active{
+
+.pic-info .info div a:active {
     border-radius: 0;
     background: #DD524D;
     color: white !important;
 }
 
-.pic-info .info div a:active h3{
+.pic-info .info div a:active h3 {
     color: white;
 }
-.pic-info .info div h3{
+
+.pic-info .info div h3 {
     font-size: 18px;
     font-weight: normal;
     color: #DD524D;
 }
+
 .pic-info .info a {
     display: table-cell;
     width: 33.3%;
@@ -147,44 +164,50 @@
     padding: 10px 0;
     border-radius: 0.5rem;
 }
-.pic-info .info a:active{
+
+.pic-info .info a:active {
     color: white;
     background: #007aff;
 }
-.pic-info .info a span{
+
+.pic-info .info a span {
     width: 48px;
     height: 48px;
     border-radius: 50%;
     border: 1px dotted #007aff;
     line-height: 48px;
 }
+
 .pic-info .info a:active span {
     border-color: white;
 }
+
 .text-info {
     padding: 1rem;
 }
-.text-info p{
+
+.text-info p {
     /*color: black;*/
 }
-.mui-search .mui-placeholder{
+
+.mui-search .mui-placeholder {
     top: 4px;
 }
 
-.black-block{
+.black-block {
     background: rgba(255, 255, 255, 0.7);
     display: inline-block;
-    color:black;
+    color: black;
 }
 
 .black-block:nth-child(n) {
     text-shadow: 0 0 10px white;
 }
 
-@supports(-webkit-backdrop-filter:none){
-    .black-block{
+@supports(-webkit-backdrop-filter:none) {
+    .black-block {
         -webkit-backdrop-filter: blur(10px);
-        transition-property:-webkit-backdrop-filter, background-color;
+        transition-property: -webkit-backdrop-filter, background-color;
         background: rgba(255, 255, 255, 0.6);
     }
 }
