房间页面换钟表图标

--- a/css/common.css
+++ b/css/common.css
@@ -710,8 +710,8 @@ hr {
 .photo {
 	margin-bottom: 10px;
 	display: inline-block;
-	width: 64px;
-	height: 64px;
+	width: 85px;
+	height: 85px;
 	background-size: cover;
 	background-position: center;
 }
@@ -1033,6 +1033,10 @@ hr {
     color: #b20e15 !important;
 }
 
+.bs-text-gray{
+    color: #999;
+}
+
 .bs-type-tab {
     display: inline-table;
     position: relative;
@@ -1060,4 +1064,30 @@ hr {
     top: 68px;
     line-height:30px;
     background-color: #fff;
+}
+
+.bs-city {
+    position: relative;
+    top: 160px;
+    color: #fff;
+    z-index: 10;
+    font-size: 36px;
+    height: 0;
+    text-align: center;
+}
+
+.bs-btn-icon {
+    position: absolute;
+    z-index: 10;
+    padding-right: 10px;
+}
+
+.calender-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    opacity: 0.9;
+    background-size: 25px 25px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
