--- a/css/room.css
+++ b/css/room.css
@@ -243,34 +243,11 @@ section {
 .discount-disabled {
     color: gray;
 }
-
-.hotel-alias{
-    color:#D69C5B;
-    font-size:20px;
-    font-weight:bold;
-}
-.room-name{
-    font-size: 20px;
-}
-.hotel-address{
-    color: #9A9691;
-    padding-top: 10px;
-    display: block
-}
-.room-amenity{
-    height: 75px;
-}
-.room-amenity-item{
-    background: #EEEEEE;
-    width: auto !important;
-}
-.room-amenity-text{
-    color: #D0CCC7;
-    margin-left: 20px;
-    margin-right: 20px
-}
-.room-designer-message{
-    font-size: 13px;
-    margin: 30px auto;
-    overflow:hidden;
+.map {
+    width: 50px;
+    height: 50px;
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    font-size: 32px;
+    top: 0;
 }
