--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -5,7 +5,8 @@ $namespace: "mui-" !default;
 
 // Type
 // --------------------------------------------------
-$font-family-default: "Helvetica Neue", Helvetica, "Microsoft Yahei",sans-serif !default;
+//$font-family-default: "Helvetica Neue", Helvetica, //"Microsoft Yahei",sans-serif !default;
+$font-family-default: "Microsoft Yahei" !default;
 $font-size-default: 17px !default;
 $font-weight: 500 !default;
 $font-weight-light: 400 !default;
