--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -6,7 +6,7 @@ $namespace: "mui-" !default;
 // Type
 // --------------------------------------------------
 //$font-family-default: "Helvetica Neue", Helvetica, //"Microsoft Yahei",sans-serif !default;
-$font-family-default: "Microsoft Yahei" !default;
+$font-family-default: "Microsoft Yahei",sans-serif !default;
 $font-size-default: 17px !default;
 $font-weight: 500 !default;
 $font-weight-light: 400 !default;
