日历按钮颜色

--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -57,7 +57,7 @@
                 <!-- 打开日历按钮 -->
                 <div class="bs-btn-icon" style="top: 100vw;right: 60px;">
                     <button type="button" class="calender-icon" style="background-image: url(img/calender.png);top: -25px;" ms-on-tap="openTimePanel">
-                        <div style="margin: 7px 1px 0 0">{{getToday('day')}}</div>
+                        <div class="bs-text-red" style="margin: 7px 1px 0 0">{{getToday('day')}}</div>
                     </button>
                 </div>
                 <!-- 打开地图按钮 -->
