--- a/css/room.css
+++ b/css/room.css
@@ -246,3 +246,12 @@ section {
 .discount-disabled {
     color: gray;
 }
+
+.isAgree {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    position: relative;
+    top: 1px;
+    margin-right: 10px;
+}
